# checkpoint_schedules

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml  docs.yml  joss-pdf.yml  lint.yml  python-package.yml  website.yml
checkpoint_schedules/: Backward.py  Forward.py  Hrevolve.py  Manage.py  Schedule.py  __init__.py  basic_schedules.py  binomial.py  hrevolve.py  mixed.py  multistage.py  none_revolver.py  off_revolver_iterators.py  off_revolvers_iterator.py  on_revolver_iterators.py  on_revolvers_iterators.py  periodic.py  revolvers.py  schedule.py  twolevel_binomial.py  utils.py
checkpoint_schedules/hrevolve_sequence/: __init__.py  basic_functions.py  disk_revolve.py  hrevolve.py  parameters.py  periodic_disk_revolve.py  revolve.py  revolve_1d.py
checkpoint_schedules/hrevolve_sequences/: basic_functions.py  disk_revolve.py  hrevolve.py  periodic_disk_revolve.py  revolve.py  revolve_1d.py  utils.py
checkpoint_schedules/revolve_sequences/: basic_functions.py  disk_revolve.py  hrevolve.py  periodic_disk_revolve.py  revolve.py  revolve_1d.py  utils.py
demos/: backup.ipynb  basic_example.ipynb  basic_example.py  burger.ipynb  testing.py  user_guide.ipynb
docs/: _config.yml  makedoc.sh  requirements.rst
docs/docs/source/docstring/: checkpoint_schedules.hrevolve_sequence.rst  checkpoint_schedules.rst  modules.rst
docs/notebooks/: burger.ipynb  tutorial.ipynb  user_guide.ipynb  user_guide.rst
docs/paper/: paper.bib  paper.md
docs/source/: TOCFILE.rst  abstract.txt  basic_example.rst  burger.rst  checkpoint_schedules.hrevolve_sequences.rst  checkpoint_schedules.revolve_sequences.rst  checkpoint_schedules.rst  conf.py  example.rst  index.rst  install.rst  intro.rst  schedule.rst  toctree.txt  tutorial.rst  user_guideline.rst
docs/source/notebook/: burger.ipynb
examples/: basic_example.py  burger.ipynb  burguer.py  example.ipynb  forward.py  initial_test.py  manage.py  sequences.py  test.py
examples/notebook/: burger.ipynb
hrevolve/: hrevolve.py  parameters.py  revolve_1d.py
hrevolve_checkpointing/: Backward.py  Forward.py  Function.py  __init__.py
hrevolve_checkpointing/checkpoint_schedules/: __init__.py  checkpoint.py  h_revolve.py  manage.py  manager.py  schedule.py
hrevolve_checkpointing/hrevolve/: basic_functions.py  periodic_disk_revolve.py
hrevolve_checkpointing/hrevolve_checkpointing/: Forward.py  Function.py
hrevolve_checkpointing/hrevolve_checkpointing-0.0.0.dist-info/: METADATA  RECORD  direct_url.json  top_level.txt
paper/: paper.md
scripts/: colab_notebooks
tests/: manage.py  test_binomial.py  test_hrevolve.py  test_mixed.py  test_multistage.py  test_trivial.py  test_twolevel.py  test_validity.py
