
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint_schedules"
version = "0.0.9"
authors = [
  { name="Daiane I. Dolci ", email="ddolci@eimperial.ic.ac.uk" },
    { name="James R. Maddison", email="j.r.maddison@ed.ac.uk" },
    { name="David A. Ham", email="david.ham@imperial.ac.uk" },
]
description = "Schedules for incremental checkpointing of adjoint simulations."
readme = "README.md"
license = {text = "LGPL-3.0"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = ["numpy"]

[project.optional-dependencies]
numba = ["numba"]
docs = ["sphinx", "nbsphinx", "nbsphinx_link", "sphinx-rtd-theme", "ipython"]
notebooks = ["jupyter", "scipy", "tabulate"]

[project.urls]
"Homepage" = "https://www.firedrakeproject.org/checkpoint_schedules/"
"repository" = "https://github.com/firedrakeproject/checkpoint_schedules"
"Bug Tracker" = "https://github.com/firedrakeproject/checkpoint_schedules/issues"


