
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint_schedules"
version = "1.0.4"
authors = [
  { name="Daiane I. Dolci ", email="d.dolci@eimperial.ic.ac.uk" },
  { name="James R. Maddison", email="j.r.maddison@ed.ac.uk" },
  { name="David A. Ham", email="david.ham@imperial.ac.uk" },
  { name="Guillaume Pallez", email="guillaume.pallez@inria.fr" },
  { name="Julien Herrmann", email="jln.herrmann@gmail.com"}
]
description = "Schedules for incremental checkpointing of adjoint simulations."
readme = "README.md"
license = {text = "LGPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = ["numpy"]

[project.optional-dependencies]
numba = ["numba"]
docs = ["sphinx", "nbsphinx", "nbsphinx_link", "sphinx-rtd-theme", "ipython"]
notebooks = ["jupyter", "scipy", "tabulate"]

[project.urls]
"Homepage" = "https://www.firedrakeproject.org/checkpoint_schedules/"
"repository" = "https://github.com/firedrakeproject/checkpoint_schedules"
"Bug Tracker" = "https://github.com/firedrakeproject/checkpoint_schedules/issues"


